force-app/main/default/objects/Sparkline__c/Sparkline__c.object-meta.xml
<CustomObject>
    <description>added from sfdx plugin</description>
    <label>Sparkline</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sparklines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>