force-app/main/default/objects/Sparkline__c/fields/Month10Volume__c.field-meta.xml
<CustomField>
    <fullName>Month10Volume__c</fullName>
    <label>Month10Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>