force-app/main/default/objects/Sparkline__c/fields/Month11Volume__c.field-meta.xml
<CustomField>
    <fullName>Month11Volume__c</fullName>
    <label>Month11Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>