force-app/main/default/objects/Sparkline__c/fields/Month12Volume__c.field-meta.xml
<CustomField>
    <fullName>Month12Volume__c</fullName>
    <label>Month12Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>