force-app/main/default/objects/Sparkline__c/fields/Monthly_Searches_Sparklines__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Searches_Sparklines__c</fullName>
    <label>Monthly Searches Sparklines</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>