force-app/main/default/objects/Sparkline__c/fields/Quickchartio__c.field-meta.xml
<CustomField>
    <fullName>Quickchartio__c</fullName>
    <formula>IMAGE(&quot;https://quickchart.io/chart?h=10&amp;w=100&amp;c={type:&apos;sparkline&apos;,data:{datasets:[{data:[&quot;&amp; TEXT($CustomMetadata.Sparklnes__mdt.SparklinesObject.Month1Volume__c)&amp;&quot;,&quot;&amp;TEXT($CustomMetadata.Sparklnes__mdt.SparklinesObject.Month2Volume__c)&amp;&quot;,&quot;&amp;TEXT($CustomMetadata.Sparklnes__mdt.SparklinesObject.Month3Volume__c)&amp;&quot;,&quot;&amp;TEXT($CustomMetadata.Sparklnes__mdt.SparklinesObject.Month4Volume__c)&amp;&quot;,&quot;&amp;TEXT($CustomMetadata.Sparklnes__mdt.SparklinesObject.Month5Volume__c)&amp;&quot;,&quot;&amp;TEXT($CustomMetadata.Sparklnes__mdt.SparklinesObject.Month6Volume__c) &amp;&quot;,&quot;&amp;TEXT($CustomMetadata.Sparklnes__mdt.SparklinesObject.Month7Volume__c)&amp;&quot;,&quot;&amp;TEXT($CustomMetadata.Sparklnes__mdt.SparklinesObject.Month8Volume__c)&amp;&quot;,&quot;&amp; TEXT($CustomMetadata.Sparklnes__mdt.SparklinesObject.Month9Volume__c)&amp;&quot;,&quot;&amp;TEXT($CustomMetadata.Sparklnes__mdt.SparklinesObject.Month10Volume__c)&amp;&quot;,&quot;&amp; TEXT($CustomMetadata.Sparklnes__mdt.SparklinesObject.Month11Volume__c)&amp;&quot;,&quot;&amp;TEXT($CustomMetadata.Sparklnes__mdt.SparklinesObject.Month12Volume__c)&amp;&quot;,&quot;&amp; &quot;]}]}}&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quickchartio</label>
    <type>Text</type>
</CustomField>